--- a/src/views/test.html
+++ b/src/views/test.html
@@ -12,7 +12,7 @@
 </body>
   <script type="text/template" id="template">
     <div class="test">
-      <h3>谁是我儿子: <%= name %></h3>
+      <h3>啊大苏打: <%= name %></h3>
       <%   _.each(data,function(item){ %>
         <p><%-  item.name %> ||  <%- item.sex %></p>
       <% }); %>
@@ -20,7 +20,6 @@
 </script>
 <script src="../libs/jquery.min.js"></script>
 <script src="../libs/underscore-min.js"></script>
-<script src="../utils/helper.js"></script>
 <script src="../build/js/build.min.js"></script>
 <script>
   $(function(){
