--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -1,3 +1,4 @@
+@primary-color:#0186D1;
 @main-color:#42AAC8;
 @blue-color:#3399CC;
 @green-color:#6AB35C;
@@ -6,6 +7,16 @@
 @bg-color:#f8f8f8;
 @red-color:#E31E1E;
 @yellow-color:#F4BD00;
+@header_background:#2075cf;
+@header_background_color: #2075cf;
+@header_height: 48px;
+@header_color:#000;
+@header_center_fontsize:.18rem;
+@header_left_height:48px;
+@header_left_width: 48px;
+@header_right_width: 48px;
+@header_right_height: 48px;
+@header_fontsize:.16rem;
 .transition(@time){
     transition:all @time ease;
 }
