--- a/src/less/index.less
+++ b/src/less/index.less
@@ -5,18 +5,17 @@
   top:0;
   left:0;
   right:0;
-  font-size:0;
   .fake_head{
-               font-family: 'iconfont';
-                  height:@header_height;
-         line-height: @header_height;
+    font-family: 'iconfont';
+    height:@header_height;
+    line-height: @header_height;
     background: #000;
     display: flex;
     justify-content: space-between;
     .title{
       font-family: 'iconfont';
       color:#FFF;
-      font-size:0.15rem;
+      font-size: 1.4rem;
       span{
         display: inline-block;
         padding: 0 10px;
@@ -26,7 +25,7 @@
       padding-right:10px;
       font-family: 'iconfont';
       color:#FFF;
-      font-size:0.15rem;
+      font-size: 1.4rem;
     }
   }
   .head{
@@ -34,36 +33,41 @@
     height:@header_height;
     line-height: @header_height;
     background: #FFF;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    overflow: hidden;
+    padding: 0 10px;
     .logo_img{
+      float: left;
       width:24%;
-      display: flex;
-      align-items: center;
+      margin-top:8px;
       img{
         width: 100%;
       }
     }
     .seek{
-      display: flex;
-      justify-content: space-around;
+      float:right;
+      width:70%;
+      margin-top:8px;
       border:1px solid #EDECEC;
       height:30px;
-      padding:0 10px;
-      align-items: center;
+      overflow: hidden;
       input{
-        width:140px;
+        float: left;
+        width:70%;
         height:28px;
-        font-size: .12rem;
+        font-size: 1rem;
+        padding: 0 5px;
+        border: none;
+        outline: none;
       }
-      span{
+      .icon{
+        float: right;
         display: block;
-        height:25px;
-        padding-left:10px;
-        line-height: 25px;
+        width:30px;
+        height:30px;
+        line-height: 30px;
+        text-align: center;
         font-family: 'iconfont';
-        font-size: .15rem;
+        font-size: 1.4rem;
         color:#0D8CD3;
         border-left: 1px solid #EDECEC;
       }
@@ -85,7 +89,7 @@
       background: #FFF;
       .swiper-wrapper {
         .swiper-slide {
-          font-size: .14rem;
+          font-size:  1.4rem;
           img {
             max-width: 100%;
           }
@@ -98,6 +102,7 @@
        display: flex;
        flex-flow:row wrap;
        -webkit-flex-flow:row wrap;
+       padding: 0;
        li{
          min-width:33.3%;
          padding: 10px 0;
@@ -105,7 +110,7 @@
            display: block;
            margin: 0 auto;
            font-family: 'iconfont';
-           font-size: .18rem;
+           font-size:  1.8rem;
            background: #007aff;
            width:50px;
            height:50px;
@@ -116,8 +121,7 @@
          }
          p{
            text-align: center;
-           font-size: .14rem;
-           padding: 4px;
+           font-size:  1.2rem;
          }
        }
      }
@@ -129,6 +133,7 @@
   left: 0;
   right: 0;
   height: @header_height;
+  background: #FFF;
   .list{
     display:-webkit-flex;
     display: flex;
@@ -141,22 +146,19 @@
       display: flex;
       align-items: center;
       div{
+        text-align:center;
         margin: 0 auto;
         span{
-          display: block;
-          margin: 0 auto;
           font-family: 'iconfont';
-          font-size: .2rem;
-          width:20px;
-          height:20px;
-          line-height: 20px;
-          text-align: center;
           color:#A09F9F;
+          font-size:  1.6rem;
         }
         p{
+          margin: 0;
           text-align: center;
-          font-size: .1rem;
+          font-size:  1rem;
           color:#A09F9F;
+
         }
       }
     }
@@ -166,14 +168,14 @@
         position:absolute;
         top:0;
         right:0;
-        width:24px;
-        height:24px;
-        line-height: 24px;
+        width:20px;
+        height:20px;
+        line-height: 20px;
         text-align: center;
         color:#FFF;
         background: red;
-        font-size:.12rem;
-        border-radius:24px;
+        font-size: 1.4rem;
+        border-radius:20px;
       }
     }
   }
