--- a/src/views/test.html
+++ b/src/views/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,43 @@
   <title>Document</title>
   <link rel="stylesheet" href="../build/css/style.min.css">
 </head>
+
 <body>
   <div class="main"></div>
 </body>
-  <script type="text/template" id="template">
-    <div class="test">
-      <h3>啊大苏打: <%= name %></h3>
-      <%   _.each(data,function(item){ %>
-        <p><%-  item.name %> ||  <%- item.sex %></p>
+<script type="text/template" id="template">
+  <div class="test">
+    <h3>啊大苏打:
+      <%= name %>
+    </h3>
+    <%   _.each(data,function(item){ %>
+      <p>
+        <%-  item.name %> ||
+          <%- item.sex %>
+      </p>
       <% }); %>
-    </div>
+  </div>
 </script>
 <script src="../libs/jquery.min.js"></script>
 <script src="../libs/underscore-min.js"></script>
 <script src="../build/js/build.min.js"></script>
 <script>
-  $(function(){
-    $.get('../../mock/data.json',(res)=>{
-      console.log('data',res)
-     var tmp =  _.template($('#template').html())({
-        name:"王南平",
-        data:res
+  $(function () {
+    $.get('../../mock/data.json', (res) => {
+      console.log('data', res)
+      var tmp = _.template($('#template').html())({
+        name: "王南平",
+        data: res
       })
 
       $('.main').html(tmp)
     })
+    var val = methodCover.getParams('goproject');
+    console.log(val);
+    $(".main").click(function () {
+      methodCover.back();
+    });
   })
 </script>
+
 </html>
