上传本次修改界面静态功能未完成

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 @import "./pulic.less";
-.header{
+.home_header{
   position: absolute;
   top:0;
   left:0;
@@ -74,7 +74,7 @@
     }
   }
 }
-.content{
+.home_content{
   position: absolute;
   top: @header_height*2;
   left: 0;
@@ -127,7 +127,7 @@
      }
   }
 }
-.footer{
+.home_footer{
   position: absolute;
   bottom: 0;
   left: 0;
