--- a/src/views/personalCenter.html
+++ b/src/views/personalCenter.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
     <title>海沃商城</title>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/loading.css">
-    <script src="../../wechatSourceStyle/js/include/loading.js"></script>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/swiper.3.1.2.min.css" />
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/personalCenter.css">
+    <link rel="stylesheet" type="text/css" href="../build/css/style.min.css">
 </head>
 
 <body>
-<div class="header">
+<div class="pe_header">
     <div class="fake_head">
         <div class="title"><span>&#xe667;</span>个人中心</div>
         <div class="more">&#xe60e;</div>
     </div>
 </div>
-<div class="content">
+<div class="pe_content">
     <div class="user_massage">
         <div class="user_pic"><div class="user_img"><img src="../../wechatSourceStyle/images/banner1_02.jpg"></div></div>
         <p class="user_name"><span>张三丰</span>(18501687256)</p>
@@ -33,7 +30,7 @@
         <span>礼品兑换</span>
     </div>
 </div>
-<footer class="footer">
+<footer class="pe_footer">
     <ul class="list">
         <li>
             <div>
@@ -65,8 +62,8 @@
     </ul>
 </footer>
 </body>
-<script src="../../wechatSourceStyle/js/include/zepto.min.js"></script>
-<script src="../../wechatSourceStyle/js/include/mobile.js"></script>
-<script src="../../wechatSourceStyle/js/include/swiper-3.4.1.min.js"></script>
-<script src="../../wechatSourceStyle/js/personalCenter.js"></script>
+<script src="../libs/jquery.min.js"></script>
+<script src="../libs/swiper-3.4.1.min.js"></script>
+<script src="../libs/underscore-min.js"></script>
+<script src="../build/js/build.min.js"></script>
 </html>
