--- a/src/views/pdClassification.html
+++ b/src/views/pdClassification.html
@@ -6,131 +6,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
     <title>海沃商城</title>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/loading.css">
-    <script src="../../wechatSourceStyle/js/include/loading.js"></script>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/swiper.3.1.2.min.css" />
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/pdClassification.css">
+    <link rel="stylesheet" type="text/css" href="../build/css/style.min.css">
 </head>
 
 <body>
-<div class="header">
-    <div class="fake_head">
-        <div class="title"><span>&#xe667;</span>配件商城</div>
-        <div class="more">&#xe60e;</div>
+    <div class="pd_header">
+        <div class="fake_head">
+            <div class="title"><span>&#xe667;</span>产品分类</div>
+            <div class="more">&#xe60e;</div>
+        </div>
+        <div class="head">
+            <div class="icon-block" onclick="methodCover.back()"><span>&#xe600;</span></div>
+            <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
+                <div class="icon"><span>&#xe602;</span></div>
+            </div>
+        </div>
     </div>
-    <div class="head">
-        <div class="icon"><span>&#xe600;</span></div>
-        <div class="seek"><input type="text" placeholder="请输入您要搜索的商品"><span>&#xe602;</span></div>
+    <div class="pd_content">
+        <ul class="none">
+            <li onclick="methodCover.go('./product.html')">
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+            <li>
+                <div class="pd_list">
+                    <div class="pdClass_img">
+                        <img src="../images/banner3_02.jpg">
+                    </div>
+                    <p>产品类1</p>
+                </div>
+            </li>
+        </ul>
     </div>
-</div>
-<div class="content">
-    <ul>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+    <footer class="pd_footer">
+        <ul class="none list">
+            <li onclick="methodCover.go('./home.html')">
+                <div>
+                    <span>&#xe638;</span>
+                    <p>首页</p>
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+            </li>
+            <li onclick="methodCover.go('./pdClassification.html')">
+                <div>
+                    <span>&#xe601;</span>
+                    <p>产品</p>
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+            </li>
+            <li class="shopping_cart" onclick="methodCover.go('./shoppingCart.html')">
+                <div>
+                    <span>&#xe6f0;</span>
+                    <p>购物车</p>
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+                <div class="number_cart">
+                    +3
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+            </li>
+            <li>
+                <div>
+                    <span>&#xe61d;</span>
+                    <p>客服</p>
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
+            </li>
+            <li>
+                <div>
+                    <span>&#xe606;</span>
+                    <p>我的</p>
                 </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
-                </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-        <li>
-            <div class="pd_list">
-                <div class="pdClass_img">
-                    <img src="../../wechatSourceStyle/images/banner3_02.jpg">
-                </div>
-                <p>产品类1</p>
-            </div>
-        </li>
-    </ul>
-</div>
-<footer class="footer">
-    <ul class="list">
-        <li>
-            <div>
-                <span>&#xe638;</span>
-                <p>首页</p>
-            </div>
-        </li>
-        <li>
-            <div>
-                <span>&#xe601;</span>
-                <p>产品</p>
-            </div>
-        </li>
-        <li class="shopping_cart">
-            <div>
-                <span>&#xe6f0;</span>
-                <p>购物车</p>
-            </div>
-            <div class="number_cart">
-                +3
-            </div>
-        </li>
-        <li>
-            <div>
-                <span>&#xe61d;</span>
-                <p>客服</p>
-            </div>
-        </li>
-        <li>
-            <div>
-                <span>&#xe606;</span>
-                <p>我的</p>
-            </div>
-        </li>
-    </ul>
-</footer>
+            </li>
+        </ul>
+    </footer>
 </body>
-<script src="../../wechatSourceStyle/js/include/zepto.min.js"></script>
-<script src="../../wechatSourceStyle/js/include/mobile.js"></script>
-<script src="../../wechatSourceStyle/js/include/swiper-3.4.1.min.js"></script>
-<script src="../../wechatSourceStyle/js/pdClassification.js"></script>
+<script src="../libs/jquery.min.js"></script>
+<script src="../libs/swiper-3.4.1.min.js"></script>
+<script src="../libs/underscore-min.js"></script>
+<script src="../build/js/build.min.js"></script>
+
 </html>
