--- a/src/views/shoppingCart.html
+++ b/src/views/shoppingCart.html
@@ -6,98 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
     <title>海沃商城</title>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/loading.css">
-    <script src="../../wechatSourceStyle/js/include/loading.js"></script>
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/include/swiper.3.1.2.min.css" />
-    <link rel="stylesheet" href="../../wechatSourceStyle/css/shoppingCart.css">
+    <link rel="stylesheet" type="text/css" href="../build/css/style.min.css">
 </head>
 
 <body>
-<div class="header">
-    <div class="fake_head">
-        <div class="title"><span>&#xe667;</span>购物车</div>
-        <div class="more">&#xe60e;</div>
-    </div>
-    <div class="head">
-        <div class="icon"><span>&#xe600;</span></div>
-        <div class="seek"><input type="text" placeholder="请输入您要搜索的商品"><span>&#xe602;</span></div>
-    </div>
-</div>
-<div class="content">
-    <div class="cart_list">
-    <div class="check">
-        <div class="check_btn check_color">
-            <span >&#xe620;</span>
+    <div class="sc_header">
+        <div class="fake_head">
+            <div class="title"><span>&#xe667;</span>购物车</div>
+            <div class="more">&#xe60e;</div>
+        </div>
+        <div class="head">
+            <div class="icon-block" onclick="methodCover.back()"><span>&#xe600;</span></div>
+            <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
+                <div class="icon"><span>&#xe602;</span></div>
+            </div>
         </div>
     </div>
-    <div class="list_product">
-        <div class="pd_img"><img src="../../wechatSourceStyle/images/logo.png"></div>
-        <div class="pd_massage">
-            <div class="pd_name">
-                <span>产品名称产品名称产品名称产品名称</span>
-            </div>
-            <div class="pd_number">
-                <div class="chooser">
-                    <span>-</span>
-                    <input type="text" value="1">
-                    <span>+</span>
+    <div class="sc_content">
+        <div class="cart_list">
+            <div class="check">
+                <div class="check_btn check_color">
+                    <span>&#xe620;</span>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="pd_make">
-        <div class="pd_price">￥238</div>
-        <div class="del">&#xe605;</div>
-    </div>
-</div>
-    <div class="cart_list">
-        <div class="check">
-            <div class="check_btn check_color">
-                <span >&#xe620;</span>
-            </div>
-        </div>
-        <div class="list_product">
-            <div class="pd_img"><img src="../../wechatSourceStyle/images/logo.png"></div>
-            <div class="pd_massage">
-                <div class="pd_name">
-                    <span>产品名称产品名称产品名称产品名称</span>
-                </div>
-                <div class="pd_number">
-                    <div class="chooser">
-                        <span>-</span>
-                        <input type="text" value="1">
-                        <span>+</span>
+            <div class="list_product">
+                <div class="pd_img"><img src="../images/logo.png"></div>
+                <div class="pd_massage">
+                    <div class="pd_name">
+                        <span>产品名称产品名称产品名称产品名称</span>
+                    </div>
+                    <div class="pd_number">
+                        <div class="chooser">
+                            <span>-</span>
+                            <input type="text" value="1">
+                            <span>+</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="pd_make">
-            <div class="pd_price">￥238</div>
-            <div class="del">&#xe605;</div>
-        </div>
-    </div>
-</div>
-<footer class="footer">
-    <div class="all_check">
-        <div class="check">
-            <div class="check_btn check_color">
-                <span >&#xe620;</span>
+            <div class="pd_make">
+                <div class="pd_price">￥238</div>
+                <div class="del">&#xe605;</div>
             </div>
         </div>
-        <span class="check_name">全选</span>
-    </div>
-    <div class="close">
-        <div class="price">
-            总计：￥<span>2506</span>
+        <div class="cart_list">
+            <div class="check">
+                <div class="check_btn check_color">
+                    <span>&#xe620;</span>
+                </div>
+            </div>
+            <div class="list_product">
+                <div class="pd_img"><img src="../images/logo.png"></div>
+                <div class="pd_massage">
+                    <div class="pd_name">
+                        <span>产品名称产品名称产品名称产品名称</span>
+                    </div>
+                    <div class="pd_number">
+                        <div class="chooser">
+                            <span>-</span>
+                            <input type="text" value="1">
+                            <span>+</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pd_make">
+                <div class="pd_price">￥238</div>
+                <div class="del">&#xe605;</div>
+            </div>
         </div>
-        <div class="btn">
-            去结算
-        </div>
     </div>
-</footer>
+    <footer class="sc_footer">
+        <div class="all_check">
+            <div class="check">
+                <div class="check_btn check_color">
+                    <span>&#xe620;</span>
+                </div>
+            </div>
+            <span class="check_name">全选</span>
+        </div>
+        <div class="close">
+            <div class="price">
+                总计：￥<span>2506</span>
+            </div>
+            <div class="btn_acc">
+                去结算
+            </div>
+        </div>
+    </footer>
 </body>
-<script src="../../wechatSourceStyle/js/include/zepto.min.js"></script>
-<script src="../../wechatSourceStyle/js/include/mobile.js"></script>
-<script src="../../wechatSourceStyle/js/include/swiper-3.4.1.min.js"></script>
-<script src="../../wechatSourceStyle/js/shoppingCart.js"></script>
+<script src="../libs/jquery.min.js"></script>
+<script src="../libs/swiper-3.4.1.min.js"></script>
+<script src="../libs/underscore-min.js"></script>
+<script src="../build/js/build.min.js"></script>
+
 </html>
