--- a/src/less/home.less
+++ b/src/less/home.less
@@ -12,17 +12,16 @@
     background: #000;
     display: flex;
     justify-content: space-between;
+      padding: 0 10px;
     .title{
       font-family: 'iconfont';
       color:#FFF;
       font-size: 1.4rem;
-      span{
-        display: inline-block;
-        padding: 0 10px;
+       i{
+        font-size:1.4rem;
       }
     }
     .more{
-      padding-right:10px;
       font-family: 'iconfont';
       color:#FFF;
       font-size: 1.4rem;
@@ -148,7 +147,7 @@
       div{
         text-align:center;
         margin: 0 auto;
-        span{
+        i{
           font-family: 'iconfont';
           color:#A09F9F;
           font-size:  1.6rem;
