--- a/src/less/pdClassification.less
+++ b/src/less/pdClassification.less
@@ -16,17 +16,16 @@
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+      padding: 0 10px;
     .title{
       font-family: 'iconfont', serif;
       color:#FFF;
-      font-size:0.15rem;
-      span{
-        display: inline-block;
-        padding: 0 10px;
+      font-size:1.4rem;
+      i{
+        font-size: 1.4rem;
       }
     }
     .more{
-      padding-right:10px;
       font-family: 'iconfont', serif;
       color:#FFF;
       font-size:0.15rem;
@@ -141,7 +140,7 @@
       div{
         text-align:center;
         margin: 0 auto;
-        span{
+        i{
           font-family: 'iconfont';
           color:#A09F9F;
           font-size:  1.6rem;
