--- a/src/less/personalCenter.less
+++ b/src/less/personalCenter.less
@@ -15,20 +15,17 @@
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+    padding:0 10px;
     .title{
       font-family: 'iconfont';
       color:#FFF;
-      font-size:0.15rem;
-      span{
-        display: inline-block;
-        padding: 0 10px;
-      }
+      font-size:1.4rem;
     }
     .more{
       padding-right:10px;
       font-family: 'iconfont';
       color:#FFF;
-      font-size:0.15rem;
+      font-size:1.4rem;
     }
   }
 }
@@ -97,10 +94,10 @@
     justify-content: space-between;
     .total{
       font-family: 'iconfont';
-      font-size: .14rem;
+      font-size: 1.4rem;
       color:#AD9F9F;
       span{
-        font-size: .16rem;
+        font-size: 1.6rem;
         color:#127DC5;
       }
     }
@@ -125,21 +122,16 @@
       display: flex;
       align-items: center;
       div{
+        text-align:center;
         margin: 0 auto;
         span{
-          display: block;
-          margin: 0 auto;
-          font-family: 'iconfont';
-          font-size: .2rem;
-          width:20px;
-          height:20px;
-          line-height: 20px;
-          text-align: center;
           color:#A09F9F;
+          font-size:  1.6rem;
         }
         p{
+          margin:0;
           text-align: center;
-          font-size: .1rem;
+          font-size: 1.4rem;
           color:#A09F9F;
         }
       }
