--- a/src/less/shoppingCart.less
+++ b/src/less/shoppingCart.less
@@ -16,20 +16,19 @@
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+    padding:0 10px;
     .title{
       font-family: 'iconfont', serif;
       color:#FFF;
-      font-size:0.15rem;
-      span{
-        display: inline-block;
-        padding: 0 10px;
+      font-size:1.4rem;
+       i{
+        font-size:1.4rem;
       }
     }
     .more{
-      padding-right:10px;
       font-family: 'iconfont', serif;
       color:#FFF;
-      font-size:0.15rem;
+      font-size:1.4rem;
     }
   }
   .head{
