--- a/src/views/shoppingCart.html
+++ b/src/views/shoppingCart.html
@@ -12,13 +12,13 @@
 <body>
     <div class="sc_header">
         <div class="fake_head">
-            <div class="title"><span>&#xe667;</span>购物车</div>
-            <div class="more">&#xe60e;</div>
+            <div class="title"><i class="icons icon-chacha"></i>购物车</div>
+            <div class="more"><i class="icons icon-search"></i></div>
         </div>
         <div class="head">
-            <div class="icon-block" onclick="methodCover.back()"><span>&#xe600;</span></div>
+            <div class="icon-block" onclick="methodCover.back()"><i class="icons icon-taobaozhongchou4qizuoyoujiantou"></i></div>
             <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
-                <div class="icon"><span>&#xe602;</span></div>
+                <div class="icon"><i class="icons icon-search"></i></div>
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
         <div class="cart_list">
             <div class="check">
                 <div class="check_btn check_color">
-                    <span>&#xe620;</span>
+                    <span class="icons icon-zhengque"></span>
                 </div>
             </div>
             <div class="list_product">
@@ -46,33 +46,7 @@
             </div>
             <div class="pd_make">
                 <div class="pd_price">￥238</div>
-                <div class="del">&#xe605;</div>
-            </div>
-        </div>
-        <div class="cart_list">
-            <div class="check">
-                <div class="check_btn check_color">
-                    <span>&#xe620;</span>
-                </div>
-            </div>
-            <div class="list_product">
-                <div class="pd_img"><img src="../images/logo.png"></div>
-                <div class="pd_massage">
-                    <div class="pd_name">
-                        <span>产品名称产品名称产品名称产品名称</span>
-                    </div>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="pd_make">
-                <div class="pd_price">￥238</div>
-                <div class="del">&#xe605;</div>
+                <div class="del"><i class="icons icon-shanchu"></i></div>
             </div>
         </div>
     </div>
@@ -80,7 +54,7 @@
         <div class="all_check">
             <div class="check">
                 <div class="check_btn check_color">
-                    <span>&#xe620;</span>
+                    <span class="icons icon-zhengque"></span>
                 </div>
             </div>
             <span class="check_name">全选</span>
