--- a/src/less/iconfont.less
+++ b/src/less/iconfont.less
@@ -7,7 +7,7 @@
   url('../../font/iconfont.svg?t=1491206161450#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-.iconfont {
+.icons {
   font-family:"iconfont" !important;
   font-size:16px;
   font-style:normal;
