--- a/src/less/product.less
+++ b/src/less/product.less
@@ -16,20 +16,19 @@
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+    padding:0 10px;
     .title{
       font-family: 'iconfont', serif;
       color:#FFF;
-      font-size:0.15rem;
-      span{
-        display: inline-block;
-        padding: 0 10px;
+      font-size:1.4rem;
+      i{
+        font-size:1.4rem;
       }
     }
     .more{
-      padding-right:10px;
       font-family: 'iconfont', serif;
       color:#FFF;
-      font-size:0.15rem;
+      font-size:1.4rem;
     }
   }
   .head{
@@ -225,7 +224,6 @@
         text-align:center;
         margin: 0 auto;
         span{
-          font-family: 'iconfont';
           color:#A09F9F;
           font-size:  1.6rem;
         }
