--- a/src/views/home.html
+++ b/src/views/home.html
@@ -12,13 +12,13 @@
 <body>
     <div class="home_header">
         <div class="fake_head">
-            <div class="title"><span>&#xe667;</span>配件商城</div>
-            <div class="more">&#xe60e;</div>
+            <div class="title"><i class="icons icon-chacha"></i>配件商城</div>
+            <div class="more"><i class="icons icon-more1170511easyiconnet"></i></div>
         </div>
         <div class="head">
             <div class="logo_img"><img src="../images/logo.png"></div>
             <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
-                <div class="icon"><span>&#xe602;</span></div>
+                <div class="icon"><i class="icons icon-search"></i></div>
             </div>
         </div>
     </div>
@@ -42,43 +42,7 @@
         <div class="hot_nav">
             <ul class="none">
                 <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
-                    <p>产品类1</p>
-                </li>
-                <li>
-                    <span>&#xe611;</span>
+                    <span class="icons icon-liwu"></span>
                     <p>产品类1</p>
                 </li>
             </ul>
@@ -88,19 +52,19 @@
         <ul class="none list">
             <li onclick="methodCover.go('./home.html')">
                 <div>
-                    <span>&#xe638;</span>
+                    <i class="icons icon-fangwuicon"></i>
                     <p>首页</p>
                 </div>
             </li>
             <li onclick="methodCover.go('./pdClassification.html')">
                 <div>
-                    <span>&#xe601;</span>
+                    <i class="icons icon-chanpin"></i>
                     <p>产品</p>
                 </div>
             </li>
             <li class="shopping_cart" onclick="methodCover.go('./shoppingCart.html')">
                 <div>
-                    <span>&#xe6f0;</span>
+                    <i class="icons icon-gouwuche"></i>
                     <p>购物车</p>
                 </div>
                 <div class="number_cart">
@@ -109,13 +73,13 @@
             </li>
             <li>
                 <div>
-                    <span>&#xe61d;</span>
+                    <i class="icons icon-dianhua"></i>
                     <p>客服</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <span>&#xe606;</span>
+                    <i class="icons icon-gerenzhongxin"></i>
                     <p>我的</p>
                 </div>
             </li>
