--- a/src/views/personalCenter.html
+++ b/src/views/personalCenter.html
@@ -12,47 +12,47 @@
 <body>
 <div class="pe_header">
     <div class="fake_head">
-        <div class="title"><span>&#xe667;</span>个人中心</div>
-        <div class="more">&#xe60e;</div>
+        <div class="title"><i class="icons icon-chacha"></i>个人中心</div>
+        <div class="more"><i class="icons icon-more1170511easyiconnet"></i></div>
     </div>
 </div>
 <div class="pe_content">
     <div class="user_massage">
-        <div class="user_pic"><div class="user_img"><img src="../../wechatSourceStyle/images/banner1_02.jpg"></div></div>
+        <div class="user_pic"><div class="user_img"><img src="../images/banner1_02.jpg"></div></div>
         <p class="user_name"><span>张三丰</span>(18501687256)</p>
         <div class="post"><span>经销商</span></div>
     </div>
     <div class="wrap">
          <div class="total">
-             &#xe623;<span>246</span>积分
+            <i class="icons icon-nikoqianbi"></i><span>246</span>积分
          </div>
         <span>签到有奖</span>
         <span>礼品兑换</span>
     </div>
 </div>
 <footer class="pe_footer">
-    <ul class="list">
+    <ul class="none list">
         <li>
             <div>
-                <span>&#xe638;</span>
+                <span class="icons icon-fangwuicon"></span>
                 <p>首页</p>
             </div>
         </li>
         <li>
             <div>
-                <span>&#xe601;</span>
+                <span class="icons icon-chanpin"></span>
                 <p>配件订购</p>
             </div>
         </li>
         <li>
             <div>
-                <span>&#xe61d;</span>
+                <span class="icons icon-dianhua"></span>
                 <p>服务报修</p>
             </div>
         </li>
         <li class="shopping_cart">
             <div>
-                <span>&#xe606;</span>
+                <span class="icons icon-gerenzhongxin"></span>
                 <p>个人中心</p>
             </div>
             <div class="number_cart">
