--- a/src/views/product.html
+++ b/src/views/product.html
@@ -12,13 +12,13 @@
 <body>
     <div class="pr_header">
         <div class="fake_head">
-            <div class="title"><span>&#xe667;</span>产品类</div>
-            <div class="more">&#xe60e;</div>
+            <div class="title"><i class="icons icon-chacha"></i>产品类</div>
+            <div class="more"><i class="icons icon-more1170511easyiconnet"></i></div>
         </div>
         <div class="head">
-            <div class="icon-block" onclick="methodCover.back()"><span>&#xe600;</span></div>
+            <div class="icon-block" onclick="methodCover.back()"><i class="icons icon-taobaozhongchou4qizuoyoujiantou"></i></div>
             <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
-                <div class="icon"><span>&#xe602;</span></div>
+                <div class="icon"><i class="icons icon-search"></i></div>
             </div>
         </div>
         <div class="column">
@@ -27,7 +27,7 @@
                 <li>销量</li>
                 <li>
                     价格
-                    <span>&#xe621;</span>
+                    <span class="icons icon-shangxiajiantouhover"></span>
                 </li>
             </ul>
         </div>
@@ -45,82 +45,7 @@
                             <input type="text" value="1">
                             <span>+</span>
                         </div>
-                        <div class="sp_cart">&#xe6f0;</div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_pd">
-                <div class="product_img"><img src="../images/banner2_02.jpg"></div>
-                <div class="norm">
-                    <span class="pd_name">产品名称</span>
-                    <span class="pd_price">￥238</span>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                        <div class="sp_cart">&#xe6f0;</div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_pd">
-                <div class="product_img"><img src="../images/banner3_02.jpg"></div>
-                <div class="norm">
-                    <span class="pd_name">产品名称</span>
-                    <span class="pd_price">￥238</span>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                        <div class="sp_cart">&#xe6f0;</div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_pd">
-                <div class="product_img"><img src="../images/banner3_02.jpg"></div>
-                <div class="norm">
-                    <span class="pd_name">产品名称</span>
-                    <span class="pd_price">￥238</span>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                        <div class="sp_cart">&#xe6f0;</div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_pd">
-                <div class="product_img"><img src="../images/banner3_02.jpg"></div>
-                <div class="norm">
-                    <span class="pd_name">产品名称</span>
-                    <span class="pd_price">￥238</span>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                        <div class="sp_cart">&#xe6f0;</div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_pd">
-                <div class="product_img"><img src="../images/logo.png"></div>
-                <div class="norm">
-                    <span class="pd_name">产品名称</span>
-                    <span class="pd_price">￥238</span>
-                    <div class="pd_number">
-                        <div class="chooser">
-                            <span>-</span>
-                            <input type="text" value="1">
-                            <span>+</span>
-                        </div>
-                        <div class="sp_cart">&#xe6f0;</div>
+                        <div class="sp_cart"><i class="icons  icon-gouwuche"></i></div>
                     </div>
                 </div>
             </div>
@@ -130,19 +55,19 @@
         <ul class="none list">
             <li onclick="methodCover.go('./home.html')">
                 <div>
-                    <span>&#xe638;</span>
+                    <i class="icons icon-fangwuicon"></i>
                     <p>首页</p>
                 </div>
             </li>
             <li onclick="methodCover.go('./pdClassification.html')">
                 <div>
-                    <span>&#xe601;</span>
+                    <i class="icons icon-chanpin"></i>
                     <p>产品</p>
                 </div>
             </li>
             <li class="shopping_cart" onclick="methodCover.go('./shoppingCart.html')">
                 <div>
-                    <span>&#xe6f0;</span>
+                    <i class="icons icon-gouwuche"></i>
                     <p>购物车</p>
                 </div>
                 <div class="number_cart">
@@ -151,13 +76,13 @@
             </li>
             <li>
                 <div>
-                    <span>&#xe61d;</span>
+                    <i class="icons icon-dianhua"></i>
                     <p>客服</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <span>&#xe606;</span>
+                    <i class="icons icon-gerenzhongxin"></i>
                     <p>我的</p>
                 </div>
             </li>
