--- a/src/less/pulic.less
+++ b/src/less/pulic.less
@@ -45,6 +45,18 @@ em.none { font-style: normal; }
 
 .color-main { color: #EB6001; }
 
+.color-blue{ color:#0086D1;}
+
+.color-danblue{ color:#7FD5F7;}
+
+.bac-blue{background: #0086D1;}
+
+.bac-danblue{background: #7FD5F7;}
+
+.bac-gary{background: #EAEEF1;}
+
+.bac-white{background: #FFF;}
+
 .fz1rem { font-size: 1rem; }
 
 .fz12rem { font-size: 1.2rem; }
