--- a/src/views/personalCenter.html
+++ b/src/views/personalCenter.html
@@ -10,60 +10,79 @@
 </head>
 
 <body>
-<div class="pe_header">
-    <div class="fake_head">
-        <div class="title"><i class="icons icon-chacha"></i>个人中心</div>
-        <div class="more"><i class="icons icon-more1170511easyiconnet"></i></div>
+    <div class="pe_header">
+        <div class="fake_head">
+            <div class="title"><i class="icons icon-chacha"></i>个人中心</div>
+            <div class="more"><i class="icons icon-more1170511easyiconnet"></i></div>
+        </div>
     </div>
-</div>
-<div class="pe_content">
-    <div class="user_massage">
-        <div class="user_pic"><div class="user_img"><img src="../images/banner1_02.jpg"></div></div>
-        <p class="user_name"><span>张三丰</span>(18501687256)</p>
-        <div class="post"><span>经销商</span></div>
+    <div class="pe_content bac-gary">
+        <div class="user_massage">
+            <div class="user_pic">
+                <div class="user_img"><img src="../images/banner1_02.jpg"></div>
+            </div>
+            <p class="user_name"><span>张三丰</span>(18501687256)</p>
+            <div class="post"><span>经销商</span></div>
+        </div>
+        <div class="wrap bac-white">
+            <div class="total">
+                <i class="icons icon-nikoqianbi"></i><span>246</span>积分
+            </div>
+            <div class="pe_btn">
+                <span class=" color-white bac-blue">签到有奖</span>
+                <span class=" color-white bac-danblue">礼品兑换</span>
+            </div>
+        </div>
+        <div class="pe_nav bac-white">
+             <lu class="none list">
+                 <li>
+                     <div>
+                         <i class="icons icon-gouwuche color-danblue"></i>
+                         <span>我的订单</span>
+                     </div>
+                     <div class="nav_function">
+                         <span>3</span>
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+             </lu>
+        </div>
     </div>
-    <div class="wrap">
-         <div class="total">
-            <i class="icons icon-nikoqianbi"></i><span>246</span>积分
-         </div>
-        <span>签到有奖</span>
-        <span>礼品兑换</span>
-    </div>
-</div>
-<footer class="pe_footer">
-    <ul class="none list">
-        <li>
-            <div>
-                <span class="icons icon-fangwuicon"></span>
-                <p>首页</p>
-            </div>
-        </li>
-        <li>
-            <div>
-                <span class="icons icon-chanpin"></span>
-                <p>配件订购</p>
-            </div>
-        </li>
-        <li>
-            <div>
-                <span class="icons icon-dianhua"></span>
-                <p>服务报修</p>
-            </div>
-        </li>
-        <li class="shopping_cart">
-            <div>
-                <span class="icons icon-gerenzhongxin"></span>
-                <p>个人中心</p>
-            </div>
-            <div class="number_cart">
-                +3
-            </div>
-        </li>
-    </ul>
-</footer>
+    <footer class="pe_footer">
+        <ul class="none list">
+            <li>
+                <div>
+                    <span class="icons icon-fangwuicon"></span>
+                    <p>首页</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <span class="icons icon-chanpin"></span>
+                    <p>配件订购</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <span class="icons icon-dianhua"></span>
+                    <p>服务报修</p>
+                </div>
+            </li>
+            <li class="shopping_cart">
+                <div>
+                    <span class="icons icon-gerenzhongxin"></span>
+                    <p>个人中心</p>
+                </div>
+                <div class="number_cart">
+                    +3
+                </div>
+            </li>
+        </ul>
+    </footer>
 </body>
 <script src="../libs/jquery.min.js"></script>
 <script src="../libs/swiper-3.4.1.min.js"></script>
 <script src="../libs/underscore-min.js"></script>
 <script src="../build/js/build.min.js"></script>
+
 </html>
