--- a/src/less/personalCenter.less
+++ b/src/less/personalCenter.less
@@ -140,6 +140,7 @@
             border-radius: 20px;
             text-align: center;
             line-height: 20px;
+            background: red;
           }
         }
       }
