--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -33,6 +33,9 @@
             position: absolute;
             right:2rem;
             top:1rem;
+            i{
+                color:#FFF;
+            }
         }
         @padding:20px;
         .hw-header{
