修改个人中心界面提交HTML和CSS

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -77,7 +77,7 @@
                     <p>客服</p>
                 </div>
             </li>
-            <li>
+            <li onclick="methodCover.go('./personalCenter.html')">
                 <div>
                     <i class="icons icon-gerenzhongxin"></i>
                     <p>我的</p>
