--- a/src/views/personalCenter.html
+++ b/src/views/personalCenter.html
@@ -45,12 +45,48 @@
                          <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
                      </div>
                  </li>
+                  <li>
+                     <div>
+                         <i class="icons icon-baoxiu color-danblue"></i>
+                         <span>我的报修</span>
+                     </div>
+                     <div>
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                  <li>
+                     <div>
+                         <i class="icons icon-search color-danblue"></i>
+                         <span>我的验证</span>
+                     </div>
+                     <div>
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                  <li>
+                     <div>
+                         <i class="icons icon-jibenziliao color-danblue"></i>
+                         <span>修改资料</span>
+                     </div>
+                     <div>
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                  <li>
+                     <div>
+                         <i class="icons icon-ditu color-danblue"></i>
+                         <span>收货地址管理</span>
+                     </div>
+                     <div>
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
              </lu>
         </div>
     </div>
     <footer class="pe_footer">
         <ul class="none list">
-            <li>
+            <li onclick="methodCover.go('./home.html')">
                 <div>
                     <span class="icons icon-fangwuicon"></span>
                     <p>首页</p>
@@ -68,14 +104,12 @@
                     <p>服务报修</p>
                 </div>
             </li>
-            <li class="shopping_cart">
+            <li class="shopping_cart" onclick="methodCover.go('./personalCenter.html')">
                 <div>
                     <span class="icons icon-gerenzhongxin"></span>
                     <p>个人中心</p>
                 </div>
-                <div class="number_cart">
-                    +3
-                </div>
+                <div class="number_cart"><span>+3</span></div>
             </li>
         </ul>
     </footer>
