--- a/src/less/personalCenter.less
+++ b/src/less/personalCenter.less
@@ -141,6 +141,7 @@
             text-align: center;
             line-height: 20px;
             background: red;
+            color:#fff;
           }
         }
       }
