--- a/src/views/product.html
+++ b/src/views/product.html
@@ -17,8 +17,9 @@
         </div>
         <div class="head">
             <div class="icon-block" onclick="methodCover.back()"><i class="icons icon-taobaozhongchou4qizuoyoujiantou"></i></div>
-            <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
-                <div class="icon"><i class="icons icon-search"></i></div>
+            <div class="seek">
+                <input type="text" placeholder="请输入您要搜索的商品">
+                <div class="icon header-search"><i class="icons icon-search"></i></div>
             </div>
         </div>
         <div class="column">
@@ -71,7 +72,7 @@
                     <p>购物车</p>
                 </div>
                 <div class="number_cart">
-                    +3
+                    +0
                 </div>
             </li>
             <li>
@@ -93,5 +94,5 @@
 <script src="../libs/swiper-3.4.1.min.js"></script>
 <script src="../libs/underscore-min.js"></script>
 <script src="../build/js/build.min.js"></script>
-
+<script src="../modules/product.js"></script>
 </html>
