--- a/src/views/personalCenter.html
+++ b/src/views/personalCenter.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="pe_nav bac-white">
-             <lu class="none list">
+             <ul class="none list">
                  <li>
                      <div>
                          <i class="icons icon-gouwuche color-danblue"></i>
@@ -45,18 +45,54 @@
                          <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
                      </div>
                  </li>
-             </lu>
+                <li>
+                     <div>
+                         <i class="icons icon-baoxiu color-danblue"></i>
+                         <span>我的保修</span>
+                     </div>
+                     <div class="nav_function">
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                                 <li>
+                     <div>
+                         <i class="icons icon-search color-danblue"></i>
+                         <span>我的验证</span>
+                     </div>
+                     <div class="nav_function">
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                                 <li>
+                     <div>
+                         <i class="icons icon-jibenziliao color-danblue"></i>
+                         <span>修改资料</span>
+                     </div>
+                     <div class="nav_function">
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+                                 <li>
+                     <div>
+                         <i class="icons icon-ditu color-danblue"></i>
+                         <span>收货地址管理</span>
+                     </div>
+                     <div class="nav_function">
+                         <i class="icons icon-taobaozhongchou4qizuoyoujiantou1 color-light "></i>
+                     </div>
+                 </li>
+             </ul>
         </div>
     </div>
     <footer class="pe_footer">
         <ul class="none list">
-            <li>
+            <li onClick="methodCover.go('./home.html')">
                 <div>
                     <span class="icons icon-fangwuicon"></span>
                     <p>首页</p>
                 </div>
             </li>
-            <li>
+            <li onClick="methodCover.go('./product.html')">
                 <div>
                     <span class="icons icon-chanpin"></span>
                     <p>配件订购</p>
@@ -68,7 +104,7 @@
                     <p>服务报修</p>
                 </div>
             </li>
-            <li class="shopping_cart">
+            <li class="shopping_cart" onclick="methodCover.go('./personalCenter.html')">
                 <div>
                     <span class="icons icon-gerenzhongxin"></span>
                     <p>个人中心</p>
