--- a/src/views/shoppingCart.html
+++ b/src/views/shoppingCart.html
@@ -17,8 +17,9 @@
         </div>
         <div class="head">
             <div class="icon-block" onclick="methodCover.back()"><i class="icons icon-taobaozhongchou4qizuoyoujiantou"></i></div>
-            <div class="seek"><input type="text" placeholder="请输入您要搜索的商品">
-                <div class="icon"><i class="icons icon-search"></i></div>
+            <div class="seek">
+                <input type="text" placeholder="请输入您要搜索的商品">
+                <div class="icon header-search"><i class="icons icon-search"></i></div>
             </div>
         </div>
     </div>
